--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
-    "mongoose": "^5.12.12"
+    "mongoose": "^5.12.12",
+    "nodemailer": "^6.6.1"
   }
 }
