--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,10 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "dotenv": "^10.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-pdf": "^5.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
