--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mongoose": "^5.12.12",
-    "nodemailer": "^6.6.1"
+    "nodemailer": "^6.6.1",
+    "react-google-recaptcha": "^2.1.0"
   }
 }
